SVN
-------------------------------

Gen:   Resolved issue CASTOR-1897 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added documentation for 'org.exolab.castor.builder.automaticConflictResolution' property
       Details: http://jira.codehaus.org/browse/CASTOR-1897
       (Werner - 20070313)

Gen:   Resolved issue CASTOR-1899 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem in ElementDecl.getSubstitutionGroup() related to global element references.
       Details: http://jira.codehaus.org/browse/CASTOR-1899
       (Werner - 20070313)

XML:   Resolved issue CASTOR-1902 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with validation of empty choices during unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1902
       (Werner - 20070313)

JDO:   Resolved issue CASTOR-1276 using contribution from Brian Schlining [bschlining@gmail.com]
       Added a method for forcing the timezone for dates written to the database.
       Details: http://jira.codehaus.org/browse/CASTOR-1276
       (Ralf - 20070316)

Gen:   Resolved issue CASTOR-1895 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with printing annotations in XML schma (schema writer)
       Details: http://jira.codehaus.org/browse/CASTOR-1895
       (Werner - 20070312)

Gen:   Resolved issue CASTOR-1893 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with sequence validation and substitution groups (again).
       Details: http://jira.codehaus.org/browse/CASTOR-1893
       (Werner - 20070307)

JDO:   Resolved issue CASTOR-1812 using contribution from Steven Dolg [stevendolg@gmx.at]
       Fixed problem with SQLException: Column Index out of range.
       Details: http://jira.codehaus.org/browse/CASTOR-1812
       (Ralf - 20070303)
